--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -14,3 +14,10 @@
     padding: 10px;
     margin-right: auto;
 }
+
+.sidebar__title{
+    margin-left: 10px;
+    padding: 5px;
+    font-size: 12px;
+}
+
