--- a/src/Body.css
+++ b/src/Body.css
@@ -1,8 +1,10 @@
+
 .body{
     padding: 30px;
     flex: 0.8;
     height: 100vh;
     color: white;
+    overflow-y: overlay;
     background: linear-gradient(rgb(91, 87, 115), rgba(0,0,0,1));
 }
 
